# knowledge-base

./: prompt.md
.claude/skills/openai-agent-sdk/: SKILL.md  evals.md  models.md  sandboxes.md  voice.md
.claude/skills/writing-prompts/: SKILL.md
backend/: .env.example  pyproject.toml
backend/app/pipeline/: aggregator.py  chunking.py  embeddings.py  extractor.py  ingest.py  merger.py  models.py  store.py  web.py
backend/scripts/: extract_preview.py  ingest_file.py  stability_test.py  tune_threshold.py
backend/tests/: test_chunking.py  test_ingest.py
data/: transformer.txt
supabase/migrations/: 0001_knowledge.sql
