[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "fastapi>=0.136.3",
    "openai-agents>=0.17.4",
    "pydantic-settings>=2.14.1",
    "pypdf>=6.13.1",
    "supabase>=2.31.0",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
